@@ -10,6 +10,7 @@
  * Fixed php errors on listresources and slice pages (#1031)
  * Added Hide option for Raw Resource Specification on listresources (#1030)
  * Implemented Add button per aggregate on slice page (#1042)
+ * Change WiMAX base URL (#1045)
 
 == 2.15 ==
  * Display OpenID URL on profile page (#290)
